--- a/client/public/css/main.css
+++ b/client/public/css/main.css
@@ -784,13 +784,13 @@ dd {
   border: 1px solid #0366ee;
   border-radius: 4px;
   background: #0366ee;
-  color: #ffffff;
+  color: #1d1c1c;
   font-weight: 600;
   font-family: -apple-system, BlinkMacSystemFont, Helvetica Neue, Helvetica, Arial, sans-serif;
   font-size: 1rem;
   text-transform: none;
   padding: 0.75rem 1.25rem;
-  margin: 0 0 0.5rem 0;
+  margin: 0.5rem 0.5rem 0.5rem 0.5rem;
   vertical-align: middle;
   text-align: center;
   cursor: pointer;
@@ -869,7 +869,7 @@ a.full-button {
  * Forms
  */
 [type=color], [type=date], [type=datetime], [type=datetime-local], [type=email], [type=month], [type=number], [type=password], [type=search], [type=tel], [type=text], [type=url], [type=week], [type=time], select, textarea {
-  display: block;
+  /* display: block; */
   border: 1px solid #dedede;
   border-radius: 4px;
   padding: 0.75rem;
