--- a/client/public/css/App.css
+++ b/client/public/css/App.css
@@ -68,6 +68,8 @@
   justify-content: left;
   float: left;
   margin-top: 15vh;
+  margin-left: 10px;
+  margin-right: 5px;
 }
 
 .App-item-details-box {
@@ -118,3 +120,18 @@
   border-style:solid;
   border-color:black;
 }
+
+button, [type=link]{
+  background: transparent;
+  padding: 5px;
+  border: none;
+  display: flex;
+  margin: 5px;
+}
+
+.button:hover, [type=link]:hover {
+  color: #0250bc;
+  background: transparent;
+  border: none;
+}
+
